[package]
name = "pipe_updater"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
envy = { version = "0.4" }
futures = { version = "0.3" }
log = { version =  "0.4" }
serde = { version = "1", features = ["derive"] }
serde_default = { version = "0.1" }
serde_json = { version = "1" }
thiserror = { version = "1" }
tokio = { version = "1", features = ["io-util", "net", "rt-multi-thread", "signal"] }
toml = { version = "0.5" }

anyhow = { version = "1"}
dotenv = { version = "0.15" }
flexi_logger = { version = "0.22" }
structopt = { version = "0.3" }

actix-web = { version = "4.1" }
pipe_downloader = { git = "https://github.com/scx1332/pipe_downloader.git", version = "0.3.2" }
lazy_static = "1.4"
human_bytes = "0.3"
systemctl = "0.1"
env_logger = "0.9.1"
